src/objects/sma__MATerritoryNode__c.object
<CustomObject>
    <fields>
        <fullName>sma__MAShapeLayer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Shape Layer</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>MapAnything Shape Layers</relationshipLabel>
        <relationshipName>MATerritoryNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryLayer__c</fullName>
        <label>MapAnything Territory Layer</label>
        <referenceTo>sma__MALayer__c</referenceTo>
        <relationshipLabel>MapAnything Territory Nodes</relationshipLabel>
        <relationshipName>MATerritoryNodes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>sma__MATerritoryNode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Territory Node</label>
        <referenceTo>sma__MATerritoryNode__c</referenceTo>
        <relationshipLabel>MapAnything Territory Nodes</relationshipLabel>
        <relationshipName>MATerritoryNodes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Order__c</fullName>
        <label>Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__Selected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag for node selection</description>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <label>MapAnything Territory Node</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Nodes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>